First rough draft of converting to a smarter more oop style interface between the classes Moved to using visual studio pro and added the outline of a test suite so I can begin writing unit tests against each class

--- a/MediaCenterVLCPlayer/MediaCenterVLCPlayer.csproj
+++ b/MediaCenterVLCPlayer/MediaCenterVLCPlayer.csproj
@@ -89,6 +89,7 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AudioOutput.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
