--- a/trunk/MediaCenterVLCPlayer/MediaCenterVLCPlayer.csproj
+++ b/trunk/MediaCenterVLCPlayer/MediaCenterVLCPlayer.csproj
@@ -89,6 +89,7 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AudioOutput.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
