--- a/MediaCenterVLCPlayerTestSuite/MediaCenterVLCPlayerTestSuite.csproj
+++ b/MediaCenterVLCPlayerTestSuite/MediaCenterVLCPlayerTestSuite.csproj
@@ -51,7 +51,12 @@
   <ItemGroup>
     <Content Include="Test Files\n900_extremely_short.avi" />
     <Content Include="Test Files\trn_anaglyph_adj.mpg" />
-    <Content Include="Test Files\tronlegacy-tsr1_h480p.mov" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MediaCenterVLCPlayer\MediaCenterVLCPlayer.csproj">
+      <Project>{A701E973-1957-4975-89FC-6E8A938ADAB9}</Project>
+      <Name>MediaCenterVLCPlayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
