Major re-write of the core vlclib class into a vlclibrary which can dynamically locate and load the vlc libraries so they are no longer needed to be in the same directory. This will allow for different vlc versions to be used for testing or whatever.  Also this will allow the plugin to be wrapped as a real media browser plugin that can be updated and configured via the media browser config app.  This also allows the library to run without needing vlc to be installed at all, maybe in the future we can detect it's missing, download and install it for you and then use it? who knows
All tests pass under the new model.

--- a/MediaCenterVLCPlayer/MediaCenterVLCPlayer.csproj
+++ b/MediaCenterVLCPlayer/MediaCenterVLCPlayer.csproj
@@ -105,19 +105,11 @@
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsController.cs" />
     <Compile Include="VlcEventManager.cs" />
-    <Compile Include="VlcEventType.cs" />
     <Compile Include="VlcException.cs" />
     <Compile Include="VlcInstance.cs" />
-    <Compile Include="VLCLib.cs" />
+    <Compile Include="VLCLibrary.cs" />
     <Compile Include="VlcMedia.cs" />
     <Compile Include="VlcMediaPlayer.cs" />
-    <Compile Include="VlcState.cs" />
-    <Compile Include="VolumeControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="VolumeControl.Designer.cs">
-      <DependentUpon>VolumeControl.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -131,9 +123,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="VolumeControl.resx">
-      <DependentUpon>VolumeControl.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
